[package]
name = "dbc_editor"
version = "1.7.2"
edition = "2024"
authors = ["Marco Bellusci <marco.bellusci.dev@gmail.com>"]
description = "Rust editor for .dbc files"

readme = "README.md"

[lib]
name = "dbc_editor"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.41"
encoding_rs = "0.8.35"
serde = { version = "1.0.219", features = ["derive"] }
slotmap = "1.0.7"
thiserror = "2.0.17"
