[package]
name = "can_tools"
version = "2.1.3"
edition = "2024"
authors = ["Marco Bellusci <marco.bellusci.dev@gmail.com>"]
description = "Rust editor for CanDatabase. It allows to open and modify CAN database from .dbc and .arxml files."
license = "MIT"
repository = "https://github.com/ROMA96x/can_tools"
keywords = ["dbc", "can", "automotive", "ecu"]
categories = ["parsing", "automotive", "embedded"]
homepage = "https://github.com/ROMA96x/can_tools"

readme = "README.md"

[lib]
name = "can_tools"
path = "src/lib.rs"

[dependencies]
autosar-data = "0.21.1"
chrono = "0.4.41"
encoding_rs = "0.8.35"
serde = { version = "1.0.219", features = ["derive"] }
slotmap = "1.1.1"
thiserror = "2.0.17"
